[gd_scene load_steps=6 format=3 uid="uid://c6txhrt448b4u"]

[ext_resource type="Texture2D" uid="uid://8vt5rcarnmw2" path="res://assets/alienYellow.png" id="1_4flbx"]
[ext_resource type="Script" uid="uid://6mw2v5l8oogf" path="res://player.gd" id="1_onrkg"]
[ext_resource type="PackedScene" uid="uid://caf8xfg6vi0k5" path="res://flashlight.tscn" id="3_i3pqv"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_sh265"]
radius = 57.0
height = 144.0

[sub_resource type="CircleShape2D" id="CircleShape2D_i3pqv"]
radius = 97.1854

[node name="Player" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 13
script = ExtResource("1_onrkg")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_sh265")

[node name="PickupRange" type="Area2D" parent="."]
unique_name_in_owner = true
collision_layer = 0
collision_mask = 24

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickupRange"]
shape = SubResource("CircleShape2D_i3pqv")
debug_color = Color(7.70092e-07, 0.647019, 0.255419, 0.160784)

[node name="PlayerSprite" type="Sprite2D" parent="."]
unique_name_in_owner = true
scale = Vector2(1.52899, 1.52899)
texture = ExtResource("1_4flbx")
region_enabled = true
region_rect = Rect2(0, 86.5808, 69.8059, 86.6701)

[node name="JumpBufferTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="CoyoteTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Flashlight" parent="." instance=ExtResource("3_i3pqv")]
unique_name_in_owner = true
position = Vector2(0, -50)
